added meta store and symptomcheck stores

--- a/src/todo
+++ b/src/todo
@@ -3,3 +3,8 @@ Layout: Headers and Tabs
 
 
 Fragen erstellen und symptom check hinzufügen.
+
+Translation abstrahieren
+
+Customquestion Add question needs reload to show up... oO
+Icons abtrahieren
