lots... added meta stores and custom seymptomchecks...

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,5 +1,13 @@
 {
 
+
+	"GLOBAL": {
+		"SAVE": 	"save",
+		"APPLY":	"apply",
+		"CANCEL":	"cancel",
+		"OKAY":		"okay"
+	},
+
 	"MAIN_MENU": {
 		"HEADER": "RecoveryCat"
 	},
