--- a/src/app/features/questionaire/i18n/en.json
+++ b/src/app/features/questionaire/i18n/en.json
@@ -1,3 +1,9 @@
 {
-	"MENU_ENTRY"	: "Questionaire"
+	"MENU_ENTRY"	: 	"Questionaire",
+	"QUESTION"		: 	{
+							"TYPE": {
+										"INTEGER":	"Integer",
+										"DECIMAL":	"Decimal"
+									}
+						}
 }
