--- a/src/app/features/questions/questionaire/i18n/de.json
+++ b/src/app/features/questions/questionaire/i18n/de.json
@@ -1,3 +1,12 @@
 {
-	"MENU_ENTRY"	: "Fragenkatalog"
+    "MENU_ENTRY": "Fragenkatalog",
+    "NAME": null,
+    "QUESTION": {
+        "TYPE": {
+            "INTEGER": null,
+            "DECIMAL": null,
+            "STRING": null,
+            "BOOLEAN": null
+        }
+    }
 }
