--- a/src/app/features/symptom-checks/import/i18n/de.json
+++ b/src/app/features/symptom-checks/import/i18n/de.json
@@ -1,3 +1,11 @@
 {
-	
+    "NAME": null,
+    "ACTIONS": {
+        "DELETE": null
+    },
+    "SUCCESS": {
+        "HEADER": null,
+        "OKAY": null,
+        "GOTO": null
+    }
 }
