--- a/src/app/features/symptom-checks/view/i18n/de.json
+++ b/src/app/features/symptom-checks/view/i18n/de.json
@@ -1,3 +1,14 @@
 {
-	
+    "ACTIONS": {
+        "VIEW": null
+    },
+    "DETAILS": {
+        "TITLE": null,
+        "CREATION_DATE": null,
+        "SCHEDULE": null,
+        "PAUSED_TRUE": null,
+        "PAUSED_FALSE": null,
+        "STATUS": null,
+        "QUESTIONS": null
+    }
 }
